--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="eu.jpg" alt="300 px" width=" 150 px" />
+                <img class="profile" src="foto.jpg" alt="Minha imagem pessol" width="150" />
                 <h1 class="name">Victor</h1>
                 <h3 class="tagline">Desenvolvedor de Sites</h3>
             </div><!--//profile-container-->
